# advent-of-code-2020

./: .gitignore
day1/: CMakeLists.txt  CMakeSettings.json  README.md
day1/apps/: CMakeLists.txt  app.cpp
day1/src/: CMakeLists.txt  lib.cpp
day1/tests/: CMakeLists.txt  testlib.cpp
day10/: CMakeLists.txt  README.md
day10/apps/: CMakeLists.txt  app.cpp
day10/include/: lib.hpp
day10/src/: CMakeLists.txt  lib.cpp
day10/tests/: CMakeLists.txt  testlib.cpp
day11/: CMakeLists.txt  README.md
day11/apps/: CMakeLists.txt  app.cpp
day11/include/: lib.hpp
day11/src/: CMakeLists.txt  lib.cpp
day11/tests/: CMakeLists.txt  testlib.cpp
day12/: CMakeLists.txt  README.md
day12/apps/: CMakeLists.txt  app.cpp
day12/include/: lib.hpp
day12/src/: CMakeLists.txt  lib.cpp
day12/tests/: CMakeLists.txt  testlib.cpp
day13/: CMakeLists.txt  README.md
day13/apps/: CMakeLists.txt  app.cpp
day13/include/: lib.hpp
day13/src/: CMakeLists.txt  lib.cpp
day13/tests/: CMakeLists.txt  testlib.cpp
day14/: CMakeLists.txt  README.md
day14/apps/: CMakeLists.txt  app.cpp
day14/include/: lib.hpp
day14/src/: CMakeLists.txt  lib.cpp
day14/tests/: CMakeLists.txt  testlib.cpp
day15/: CMakeLists.txt  CMakeSettings.json  README.md
day15/apps/: CMakeLists.txt  app.cpp
day15/include/: lib.hpp
day15/src/: CMakeLists.txt  lib.cpp
day15/tests/: CMakeLists.txt  testlib.cpp
day16/: CMakeLists.txt  README.md
day16/apps/: CMakeLists.txt  app.cpp
day16/include/: lib.hpp
day16/src/: CMakeLists.txt  lib.cpp
day16/tests/: CMakeLists.txt  testlib.cpp
day17/: CMakeLists.txt  README.md
day17/apps/: CMakeLists.txt  app.cpp
day17/include/: lib.hpp
day17/src/: CMakeLists.txt  lib.cpp
day17/tests/: CMakeLists.txt  testlib.cpp
day18/: CMakeLists.txt  README.md
day18/apps/: CMakeLists.txt  app.cpp
day18/include/: lib.hpp
day18/src/: CMakeLists.txt  lib.cpp
day18/tests/: CMakeLists.txt  testlib.cpp
day19/: CMakeLists.txt  CMakeSettings.json  README.md
day19/apps/: CMakeLists.txt  app.cpp
day19/include/: lib.hpp
day19/src/: CMakeLists.txt  lib.cpp
day19/tests/: CMakeLists.txt  testlib.cpp
day2/: CMakeLists.txt  CMakeSettings.json  README.md
day2/apps/: CMakeLists.txt  app.cpp
day2/include/: lib.hpp
day2/src/: CMakeLists.txt  lib.cpp
day2/tests/: CMakeLists.txt  testlib.cpp
day3/: CMakeLists.txt  README.md
day3/apps/: CMakeLists.txt  app.cpp
day3/include/: lib.hpp
day3/src/: CMakeLists.txt  lib.cpp
day3/tests/: CMakeLists.txt  testlib.cpp
day4/: CMakeLists.txt
day4/apps/: CMakeLists.txt  app.cpp
day4/include/: lib.hpp
day4/src/: CMakeLists.txt  lib.cpp
day4/tests/: CMakeLists.txt  testlib.cpp
day5/: CMakeLists.txt  README.md
day5/apps/: CMakeLists.txt  app.cpp
day5/include/: lib.hpp
day5/src/: CMakeLists.txt  lib.cpp
day5/tests/: CMakeLists.txt  testlib.cpp
day6/: CMakeLists.txt  README.md
day6/apps/: CMakeLists.txt  app.cpp
day6/include/: lib.hpp
day6/src/: CMakeLists.txt  lib.cpp
day6/tests/: CMakeLists.txt  testlib.cpp
day7/: CMakeLists.txt  README.md
day7/apps/: CMakeLists.txt  app.cpp
day7/include/: lib.hpp
day7/src/: CMakeLists.txt  lib.cpp
day7/tests/: CMakeLists.txt  testlib.cpp
day8/: CMakeLists.txt  README.md
day8/apps/: CMakeLists.txt  app.cpp
day8/include/: lib.hpp
day8/src/: CMakeLists.txt  lib.cpp
day8/tests/: CMakeLists.txt  testlib.cpp
day9/: CMakeLists.txt  README.md
day9/apps/: CMakeLists.txt  app.cpp
day9/include/: lib.hpp
day9/src/: CMakeLists.txt  lib.cpp
day9/tests/: CMakeLists.txt  testlib.cpp
